# czipio

./: Makefile.am  configure.ac  czipio.pc.in
include/: czipio-cipher.h  czipio-entry.h  czipio-utils.h  czipio.h
src/: czipio-cipher.c  czipio-entry.c  czipio-utils.c  czipio.c
